add ignore files

--- a/.gitignore
+++ b/.gitignore
@@ -109,3 +109,4 @@ research/slim/temp/annotations/train2018.json
 research/slim/temp/annotations/train2018.json.tar.gz
 research/slim/temp/annotations/val2018.json
 research/slim/temp/annotations/val2018.json.tar.gz
+research/slim/output_inat_aves2017.tar.gz
